Fix double shadow on mobile

--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/editorial/findyourcruise2018/clientlibs/files/findyourcruise2018mobile.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/editorial/findyourcruise2018/clientlibs/files/findyourcruise2018mobile.less
@@ -348,6 +348,11 @@
         display: none !important;
       }
     }
+
+    .c-fyc-v2__result__link {
+      box-shadow: none !important;
+    }
+
     .c-fyc-v2__result__content {
       width: 100%;
       display: table;
